--- a/miniprogram/pages/home/home.wxml
+++ b/miniprogram/pages/home/home.wxml
@@ -1,9 +1,9 @@
 <scroll-view scroll-y="true" bindscroll="scroll">
   <view class="swiper">
     <swiper indicator-dots="true" autoplay="true" interval="5000" duration="1000">
-      <block wx:for="{{imgUrls}}" wx:key="item.id">
+      <block wx:for="{{newsList}}" wx:key="item.id">
         <swiper-item>
-          <image src="{{item}}" class="slide-image"/>
+          <image src="{{item.pic}}" class="slide-image"/>
         </swiper-item>
       </block>
     </swiper>
@@ -14,12 +14,12 @@
   </view>
 
 <view class="container">
-    <view wx:for="{{proLst}}" class="product" >
-        <navigator url="{{item.link}}">
-            <image  src="{{item.url}}" class="pro-image" mode="widthFix" />
+    <view wx:for="{{storeList}}" class="product" wx:key= "{{item.id}}">
+        <navigator>
+            <image  src="{{item.storepic}}" class="pro-image" mode="widthFix" />
             <view class="prod-content">
-                <text class="prod-title">{{item.text}}</text>
-                <text class="prod-money">{{item.title}}</text>
+                <!-- <text class="prod-title">  </text> -->
+                <text class="prod-money">{{item.name}}   {{item.intro}}</text>
             </view>
         </navigator>
     </view>
