--- a/miniprogram/pages/lesson/lesson.wxml
+++ b/miniprogram/pages/lesson/lesson.wxml
@@ -2,70 +2,48 @@
 
     <!-- 页签tab -->
     <view class="tab-nav">
-				<text wx:for="{{tabnav.tabitem}}" bindtap="setTab" class="{{showtab==index?'active':''}}" data-tabindex="{{index}}" data-type="{{item.type}}" wx:key="{{item.type}}">{{item.text}}</text>
+      <view wx:for="{{tabnav.tabitem}}" bindtap="setTab" class="{{showtab==index?'active':''}}" data-tabindex="{{index}}" wx:key="{{item.id}}" style='width:50%'>
+      <text class = "tab-text">{{item.text}}</text>
+      </view>				
 				<view class="tab-line" style="width:{{100/tabnav.tabnum}}%;transform:translateX({{100*showtab}}%);"></view>
 			</view>
 
-    <view class="active_item_title">
+    <!-- <view class="active_item_title">
         <view class="active_title_wrap">
             <view class="active_title">限时折扣</view>
         </view>
-    </view>
-    <view class="active_item">
+    </view> -->
+
+    <view class="active_item" wx:for = "{{personallessons}}" wx:key = "{{item.id}}">
         <view>
-            <image bindload="cusImageLoad" src="../../image/test.jpg" style="width: {{imageWidth}};height: {{imageHeight}}"></image>
+            <image bindload="cusImageLoad" src="{{item.lessonpic[0]}}" style="width: {{imageWidth}};height: {{imageHeight}}"></image>
         </view>
         <view class="active_goods_name">
-            大保健营养保健品适合老年人和婴幼儿易吸收营养好吃的
+            <label>{{item.name}}</label>
+            <text class="active_new_price">￥{{item.price}}</text>
         </view>
-        <view class="active_item_infor">
-            <text class="active_new_price">¥95</text>
-            <text class="active_old_price">¥190</text>
-            <text class="active_time">还剩1天20小时</text>
-        </view>
-    </view>
-    <view class="active_item">
-        <view>
-            <image bindload="cusImageLoad" src="../../image/test.jpg" style="width: {{imageWidth}};height: {{imageHeight}}"></image>
-        </view>
-        <view class="active_goods_name">
-            大保健营养保健品适合老年人和婴幼儿易吸收营养好吃的
-        </view>
-        <view class="active_item_infor">
-            <text class="active_new_price">¥95</text>
-            <text class="active_old_price">¥190</text>
-            <text class="active_time">还剩1天20小时</text>
-        </view>
+        <!-- <view class="active_item_infor">
+               
+        </view> -->
     </view>
 </view>
+
+
 <view>
-    <view class="active_item_title">
+    <!-- <view class="active_item_title">
         <view class="active_title_wrap">
             <view class="active_title">参加团购</view>
         </view>
-    </view>
-    <view class="active_item">
+    </view> -->
+    <view class="active_item" wx:for = "{{nomallessons}}" wx:key="{{item.id}}">
         <view>
-            <image bindload="cusImageLoad" src="../../image/test.jpg" style="width: {{imageWidth}};height: {{imageHeight}}"></image>
+            <image bindload="cusImageLoad" src="{{item.lessonpic}}" style="width: {{imageWidth}};height: {{imageHeight}}"></image>
         </view>
         <view class="active_goods_name">
-            大保健营养保健品适合老年人和婴幼儿易吸收营养好吃的
+            <label>{{lessontitle}}</label>
         </view>
         <view class="active_item_infor">
-            <text class="active_group_price">团购价¥90</text>
-            <text class="active_time">三人团</text>
-        </view>
-    </view>
-    <view class="active_item">
-        <view>
-            <image bindload="cusImageLoad" src="../../image/test.jpg" style="width: {{imageWidth}};height: {{imageHeight}}"></image>
-        </view>
-        <view class="active_goods_name">
-            大保健营养保健品适合老年人和婴幼儿易吸收营养好吃的
-        </view>
-        <view class="active_item_infor">
-            <text class="active_group_price">团购价¥80</text>
-            <text class="active_time">四人团</text>
+            <text class="active_group_price">{{lessonprice}}</text>
         </view>
     </view>
 </view>
