--- a/miniprogram/pages/lesson/lesson.wxss
+++ b/miniprogram/pages/lesson/lesson.wxss
@@ -33,6 +33,8 @@
 }
 .active_new_price {
     color: #FF0000;
+    float: right;
+    position: fixed;
 }
 .active_old_price {
     font-size: 12px;
@@ -69,6 +71,13 @@
 	left: 0;
 	bottom: -1rpx;
 	height: 4rpx;
-	background: #f7982a;
+	background: #69c3aa;
 	transition: all 0.3s;
+  margin-bottom: 3px;
+}
+.tab-text{
+  display: flex;
+  justify-content: center;
+  font-size: 15px;
+	color: #777;
 }
