--- a/miniprogram/pages/home/home.wxss
+++ b/miniprogram/pages/home/home.wxss
@@ -112,6 +112,7 @@ swiper {
     -moz-box-shadow:2rpx 2rpx 5rpx #969696;
     -webkit-box-shadow:2rpx 2rpx 5rpx #969696;
     box-shadow:2rpx 2rpx 5rpx #969696;
+    width: 100%
 }
 .prod-content{
     display: flex;
