--- a/miniprogram/pages/my/my.wxml
+++ b/miniprogram/pages/my/my.wxml
@@ -7,9 +7,9 @@
 	</view>
 </view>
 <view class="wode_item_wrap">
-	<view class="wode_item" wx:for="{{mode}}" wx:key = "{{item.id}}">
+	<view class="wode_item" wx:for="{{mode}}" wx:key = "{{item.id}}" data-key='{{item.id}}' bindtap='showdetail'>
 		{{item.text}}
 		<span class="arrow_wrap"></span>
 	</view>
 </view>
-<view class="wode_out">退出</view>
+<!-- <view class="wode_out">退出</view> -->
