--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -1,4 +1,4 @@
-<scroll-view scroll-y="true" bindscroll="scroll">
+<view>
   <view class="swiper">
     <swiper indicator-dots="true" autoplay="true" interval="5000" duration="1000">
       <block wx:for="{{newsList}}" wx:key="_id">        
@@ -25,4 +25,4 @@
     </view>
 </view>  
 
-</scroll-view>
+</view>
