--- a/miniprogram/pages/detail/lessondetail/lessondetail.wxml
+++ b/miniprogram/pages/detail/lessondetail/lessondetail.wxml
@@ -12,8 +12,12 @@
         <view > -->
             <!--todo 这个地方有些问题，图片的适配没做好-->
             <!-- <image class="modalImage" src="{{imageUrl}}" mode="aspectFill"></image>
-        </view>
+        </view> 
     </modal> -->
+
+    <!-- <view class="videoFrame">
+        <video class="video" src="http://v.youku.com/v_show/id_XMTczMjE2MTMzMg==.mp4"></video>
+    </view> -->
 
     <view>
         <image class="image" src="{{lesson.lessonpic[0]}}" mode="aspectFill" bindtap="onImageClick"></image>
@@ -28,21 +32,74 @@
 
     <view class="frame">
         <view class="tag">班级信息</view>
-        <view wx:for="{{lesson.lessoninfo}}" wx:for-item="lessoninfo">
-            <view class="tag-second">{{lessoninfo.name}}</view>
-            <view class="singleItem" wx:for="{{lessoninfo.priceinfo}}" wx:for-item="priceinfo">{{priceinfo.name}} {{priceinfo.number}} {{priceinfo.price}}</view>
+        <view wx:for="{{lesson.lessoninfo}}" wx:for-item="lessoninfo" class = "container-part">              
+              <view class="tag-second">
+                <text class='lessonname-icon'/>
+                {{lessoninfo.name}}
+              </view>
+              <!-- 具体的每一项的费用 -->
+              <view class="singleItem" wx:for="{{lessoninfo.priceinfo}}" wx:for-item="priceinfo">              
+                <label class='priceinfo-name'>{{priceinfo.name}}({{priceinfo.number}}节课)</label>
+                <label class='priceinfo-price'>￥{{priceinfo.price}}</label>               
+              </view>
+              <!-- 合计 -->              
+                <view>
+                  <label class='old-price'>原价</label>
+                  <label class='old-price-value'>￥{{lessoninfo.oldprice}}</label>
+                </view>
+                <view>
+                  <label class='current-price'>合计</label>
+                  <label class='current-price-value'>￥{{lessoninfo.price}}</label>
+                </view>              
+
+              <!-- 每一块之间的有一定的间距 -->
+              <view class='part-margin'/>              
         </view>
     </view>
 
-<view class="frame" wx:for="{{data}}">
-        <view class="tag">班级信息</view>
-
-        <view wx:for="{{item.singleItems}}">
-            <view class="singleItem" href="{{item.src}}">{{index}}，{{item.title}}</view>
+    <view class="frame">
+        <view class="tag">适用对象</view>
+        <view wx:for="{{lesson.audience}}">
+            <view class="singleItem">{{item}}</view>
         </view>
     </view>
 
-    <!-- <view class="videoFrame">
-        <video class="video" src="http://v.youku.com/v_show/id_XMTczMjE2MTMzMg==.mp4"></video>
-    </view> -->
+    <view class="frame">
+        <view class="tag">学习目标</view>        
+            <view class="singleItem">{{lesson.target}}</view>        
+    </view>
+
+     <view class="frame">
+        <view class="tag">购买说明</view>        
+            <view class="singleItem">
+              <text>有效期：{{buySpecification.validPeriod}}</text>
+            </view>  
+            <view class="singleItem">
+              <text>预约信息：{{buySpecification.bookingInfo}}</text>
+            </view>
+            <view class="singleItem">
+              <text>调课说明：{{buySpecification.changClass}}</text>
+            </view>
+            <view class="singleItem">
+              <text>退款说明：{{buySpecification.refund}}</text>
+            </view>
+            <view class="singleItem">
+              <text>温馨提示：{{buySpecification.tips}}</text>
+            </view>      
+    </view>
+
+    <view class='operation-area'>
+      <view class='do-comment'>
+        <image src='../../../img/comment.png' class='img-style'></image>
+        <label>点评</label>
+      </view>
+      <view class='contact-us'>
+        <image src='../../../img/contactus.png' class='img-style'></image>
+        <label>咨询</label>
+      </view>
+      <view class='buy-button'>
+        预约课程
+      </view>      
+    </view>   
+    
 </view>
