--- a/miniprogram/pages/others/comment/comment.wxml
+++ b/miniprogram/pages/others/comment/comment.wxml
@@ -1,7 +1,11 @@
 <form bindsubmit="submitComment">
+  <view class='container'>
   <view class="comment-title">{{title}}</view>
   <view class="textarea-wrp">
-      <textarea auto-focus="true" placeholder='留言将由小程序筛选后显示，对所有人可见' name="content"/>
+      <textarea placeholder='留言将由小程序筛选后显示，对所有人可见' name="content"/>
   </view>
+  <view>
   <button class="do-comment" form-type="submit">提交</button>
+  </view>
+  </view>
 </form>
