--- a/miniprogram/pages/others/myorder/myorder.wxml
+++ b/miniprogram/pages/others/myorder/myorder.wxml
@@ -1,2 +1,40 @@
-<!--miniprogram/pages/others/myorder/myorder.wxml-->
-<text>miniprogram/pages/others/myorder/myorder.wxml</text>
+<view class="active_block">
+
+    <!-- 页签tab -->
+    <view class="tab-nav">
+      <view wx:for="{{tabnav.tabitem}}" bindtap="setTab" class="{{showtab==index?'active':''}}" data-tabindex="{{index}}" wx:key="{{item.id}}" style='width:20%'>
+      <text class = "tab-text">{{item.text}}</text>
+      </view>				
+				<view class="tab-line" style="width:{{100/tabnav.tabnum}}%;transform:translateX({{100*showtab}}%);"></view>
+			</view>
+
+    <!-- 订单展示 -->
+    <block wx:for-items="{{myorders}}" wx:for-item="order" wx:key="_id" >
+    <view class="list" data-id="{{order._id}}" bindtap='showOrderDetail'>
+      <!-- <view class="list-img">
+        <image class="video-img" mode="scaleToFill" src="{{order.lessonpic[0]}}"></image>
+      </view> -->
+      <view class="list-detail">        
+        <view class="list-title">
+          <text class="mobi_icon"></text>
+          <text class='list-title-text'>{{order.name}}</text>          
+          <image src='../../../img/more.png' class='more-img'/>
+        </view>                
+      </view>  
+      
+      <view>
+        <view class='text-price'>￥{{order.price}}</view>
+      </view>
+      <view class="list-tag">        
+        <view class="state">{{orderstatus[order.status]}}</view>
+        <view class="join"><text class="list-num">{{order.time}}</text></view>
+      </view>     
+    </view>
+  </block>  
+  
+</view>
+
+
+<view>
+   
+</view>
