--- a/miniprogram/pages/detail/storedetail/storedetail.wxss
+++ b/miniprogram/pages/detail/storedetail/storedetail.wxss
@@ -1,1 +1,221 @@
-/* miniprogram/pages/detail/storedetail/storedetail.wxss */
+.image {
+    width: 100%;
+    height: 200px;
+    background-color: #ffffff;
+}
+ 
+.frame {
+    background-color: #ffffff;
+    border-radius: 5px;
+    box-shadow: 4px 1px 1px #cccccc;
+    margin: 8px;
+    padding: 16px;
+    
+}
+
+.tag {
+    font-size: 16px;
+    font-weight: 900;
+    margin-bottom: 8px;
+}
+.tag-second{
+  font-size: 14px;
+  font-weight: 100;
+  margin-bottom: 6px;
+  margin-left: 4px;
+}
+.singleItem {
+    font-size: 12px;
+    margin-bottom: 6px;
+    color: darkgray;
+}
+.checkInMap{
+  font-size: 12px;
+  margin-bottom: 6px;  
+  color: #69c3aa;
+}
+
+.videoFrame{
+    background-color: #ffffff;
+    border-radius: 5px;
+    box-shadow: 4px 1px 1px #cccccc;
+    margin: 8px;
+    position: relative;
+}
+
+.video {
+    width: 100%;
+}
+
+.modalImage{
+    margin: auto;
+    width: 100%;
+    height: 1000rpx
+}
+.priceinfo-name{
+  display: flex;
+  float: left;
+  justify-content: center;
+}
+.priceinfo-price{
+  display: flex;
+  justify-content: center;
+  float: right;
+}
+
+.container-part{
+  display: flex;
+  flex-direction: column;
+}
+.price-detail-line{
+  display: flex;
+  flex-direction: row;
+}
+.part-margin{
+  margin-top: 10px;
+}
+.old-price{
+  font-size: 14px;
+  padding-left: 3px;
+  display: flex;
+  float: left;
+  justify-content: center;
+  color: #69c3aa;
+}
+.old-price-value{
+  font-size: 14px;
+  padding-left: 3px;
+  display: flex;
+  float: right;
+  justify-content: center;
+  color: #69c3aa;
+  text-decoration: line-through;
+}
+.current-price{
+  font-size: 14px;
+  padding-left: 3px;
+  display: flex;
+  float: left;
+  justify-content: center;
+  color:red;
+}
+.current-price-value{
+  font-size: 14px;
+  padding-left: 3px;
+  display: flex;
+  float: right;
+  justify-content: center;
+  color: red;
+  font-weight: bold;
+}
+
+.lessonname-icon{
+  padding: 0px 1.5px;
+  border-radius: 1.5px;
+  background-color: #69c3aa;
+  position: relative;
+  margin-right: 5px;
+}
+
+.operation-area{
+    width: 100%;
+    position: fixed;
+    bottom: 3px;
+    background: #ffffff;
+    display: flex;
+    flex-direction: row;
+    height: 60px;
+    border-top: 1px solid #cccccc
+}
+.btn{   
+    border-radius: 70rpx;
+}
+.img-style{
+  width: 25px;
+  height: 25px;
+}
+.do-comment{
+  margin-top: 5px;
+  display: flex;
+  flex-direction: column;
+  font-size: 15px;
+  justify-content: center;
+  color: #cccccc;
+  margin-left: 10px;
+
+}
+.contact-us{
+  margin-top: 5px;
+  display: flex;
+  flex-direction: column;
+  font-size: 15px;
+  justify-content: center;
+  color: #cccccc;
+  
+}
+.buy-button{
+  width: 100%;
+  background: #69c3aa;
+  text-align: center;  
+  color: white;
+  font-size: 16px;
+  padding-top: 20px;
+}
+.contact-button{
+  background: transparent;
+  border: 0 solid transparent;
+}
+.contact-button-innerview{
+  display: flex;
+  flex-direction: column;
+}
+.contact-button-innerview-label{
+  font-size: 15px;
+}
+button::after{
+border: none;
+}
+
+.comment-button{
+  background: transparent;
+  border: 0 solid transparent;
+}
+
+.store-button-area{
+  border-radius: 5px;
+  background: #69c3aa;
+  margin: 0 8px 10px 16px;
+  display: flex;
+  flex-direction: row;
+}
+.store-button-area-left{
+  display: flex;
+  flex-direction: column;
+  width: 70%;
+  margin: 3px;
+}
+.store-button-area-label{
+  font-size: 16px;
+  color: white;
+  padding-top: 5px;
+  padding-left: 4px;
+}
+.store-button-area-text{
+  font-size: 12px;
+  color: white;
+  padding-top: 5px;
+  padding-left: 4px;
+  margin-bottom: 5px;
+}
+.store-button-area-right{
+  font-size: 15px;
+  color: white;
+  margin: auto auto;
+  width: 50px;
+  height: 30px;
+  border: 1px solid white;
+  border-radius: 10px;
+  justify-content: center;
+  display: flex;
+  padding-top: 8px
+}
